# fast

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  WARP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.dev
docs/: CI-CD-PIPELINE.md  DEVELOPER_WORKFLOW.md  ENDPOINT_DEVELOPMENT_GUIDE.md
scripts/: dev-setup.sh
src/fast_api/: __init__.py  config.py  database.py  main.py  models.py
src/fast_api/models/: __init__.py  responses.py
src/fast_api/routers/: api.py  health.py
src/fast_api/routes/: __init__.py  api.py  health.py  hello_world.py
tests/: conftest.py  test_api.py
